# bmwm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  quick.sh
dev-config/: bwm.lua  com.bedtime.bwm.plist
osx/: CMakeLists.txt  OSEntitlements.plist
osx/AppLaunch/: AppLaunchRunner.entry.js  AppLaunchRunner.m  AppLaunchRunner.script.js  main.m
osx/AppLaunch/agent/: bootstrap.js  input.js  loaders.js  render.js  shared.js  state.js  titlebar-patch.js  windows.js
osx/Config/: lua_config.c  lua_config.h
osx/FramebufferLib/: api.m  iomfb.h  iomfb.m
osx/FridaCore/: download_frida_core.cmake.in
osx/Headless/: slx_server_wrapper.c
osx/LibRenderServer/: compositing.c  compositing.h  render_server.c  render_server.h
osx/Loader/: amfid_handler.m  becomeheadless.m  load.c  quartz_handler.m  ws_handler.m
osx/MainUserspace/: dog_satisfy.h  dog_satisfy.m  launch-wrangler.c  launch-wrangler.h  main.c
osx/WindowManager/: bwm.h  bwm_wm.c  client.c  config.c  events.c  focus.c  input.c  main.c
scripts/: install-bwm-plist.sh  start-applaunch-bwm.sh  start-applaunch-only.sh  start-bwm.sh  start-thunar-bwm.sh  start-thunar-xterm-bwm.sh  start-thunar.sh  start-xclock.sh  uninstall-bwm-plist.sh
